--- a/index.html
+++ b/index.html
@@ -1,53 +1,59 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover"/>
 
 <title>WalkCut</title>
 
-<meta name="theme-color" content="#0B1B2B">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<!-- HIGHLANDER STRATEGIES LLC THEME -->
+<meta name="theme-color" content="#0B1B2B"/>
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
 
-<!-- LAV-25 APP ICON -->
-<link rel="apple-touch-icon" href="icon.png">
+<!-- LAV-25 ICON (embedded, no extra files needed) -->
+<link rel="apple-touch-icon" href="data:image/png;base64,REPLACE_THIS_WITH_LAV25_BASE64"/>
 
 <style>
 :root{
   --navy:#0B1B2B;
   --gun:#121E2A;
-  --gold:#C9A24D;
   --steel:#8FA3B8;
+  --gold:#C9A24D;
   --good:#3DDC97;
+  --bad:#C44B4B;
 
   --bg:linear-gradient(180deg,#08131E,#0B1B2B);
-  --card:rgba(18,30,42,.85);
+  --card:#121E2A;
   --border:rgba(201,162,77,.25);
-  --shadow:0 16px 40px rgba(0,0,0,.55);
+  --shadow:0 14px 30px rgba(0,0,0,.55);
+
+  --r:16px;
+  --pad:16px;
+  --sans:-apple-system,BlinkMacSystemFont,"SF Pro Text",system-ui;
+  --mono:ui-monospace,Menlo,monospace;
 }
 
 *{box-sizing:border-box}
 body{
   margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"SF Pro Text",system-ui;
+  font-family:var(--sans);
   background:var(--bg);
   color:#EAF0F6;
 }
 
 header{
-  position:sticky;
-  top:0;
-  z-index:10;
-  padding:14px;
+  position:sticky;top:0;z-index:10;
   background:rgba(11,27,43,.92);
+  backdrop-filter:blur(12px);
   border-bottom:1px solid var(--border);
+  padding:14px;
 }
 
 h1{
   margin:0;
   font-size:20px;
-  letter-spacing:.4px;
+  letter-spacing:.3px;
   display:flex;
   justify-content:space-between;
   align-items:center;
@@ -55,46 +61,32 @@ h1{
 
 .pill{
   font-size:12px;
+  color:var(--gold);
+  border:1px solid var(--border);
   padding:6px 10px;
   border-radius:999px;
-  border:1px solid var(--border);
-  color:var(--gold);
 }
 
-main{
-  max-width:900px;
-  margin:auto;
-  padding:14px 14px 100px;
-}
-
-.grid{
-  display:grid;
-  gap:14px;
-}
-@media(min-width:720px){
-  .grid.two{grid-template-columns:1fr 1fr}
-}
+main{padding:14px 14px 100px;max-width:900px;margin:auto}
+.grid{display:grid;gap:14px}
+@media(min-width:720px){.grid.two{grid-template-columns:1fr 1fr}}
 
 .card{
-  background:var(--card);
+  background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(0,0,0,.25));
   border:1px solid var(--border);
-  border-radius:16px;
-  padding:16px;
+  border-radius:var(--r);
+  padding:var(--pad);
   box-shadow:var(--shadow);
 }
 
 .card h2{
   margin:0 0 10px;
   font-size:14px;
-  letter-spacing:.4px;
   color:var(--gold);
+  letter-spacing:.4px;
 }
 
-.kpi{
-  display:flex;
-  gap:10px;
-  flex-wrap:wrap;
-}
+.kpi{display:flex;gap:10px;flex-wrap:wrap}
 .kpi .box{
   flex:1 1 110px;
   background:rgba(0,0,0,.35);
@@ -102,14 +94,22 @@ main{
   border-radius:12px;
   padding:12px;
 }
-.kpi .label{
-  font-size:11px;
-  color:var(--steel);
-}
-.kpi .value{
-  font-size:18px;
+.kpi .label{font-size:11px;color:var(--steel)}
+.kpi .value{font-size:18px;font-weight:700;font-family:var(--mono)}
+
+button{
+  background:linear-gradient(180deg,#D6B05C,#B8923F);
+  color:#0B1B2B;
+  border:none;
+  padding:10px 14px;
+  border-radius:12px;
   font-weight:700;
-  font-family:ui-monospace,Menlo,monospace;
+  cursor:pointer;
+}
+button.secondary{
+  background:transparent;
+  border:1px solid var(--border);
+  color:var(--gold);
 }
 
 canvas{
@@ -121,8 +121,7 @@ canvas{
 }
 
 .tabs{
-  position:fixed;
-  bottom:0;left:0;right:0;
+  position:fixed;bottom:0;left:0;right:0;
   display:flex;
   background:#0B1B2B;
   border-top:1px solid var(--border);
@@ -143,7 +142,7 @@ canvas{
 <header>
   <h1>
     WalkCut
-    <span class="pill" id="today"></span>
+    <span class="pill" id="todayPill"></span>
   </h1>
 </header>
 
@@ -151,27 +150,27 @@ canvas{
   <section class="grid two">
     <div class="card">
       <h2>Today’s Targets</h2>
-      <div class="kpi" id="walkKPI"></div>
+      <div class="kpi" id="walkTargets"></div>
     </div>
 
     <div class="card">
       <h2>Macros Remaining</h2>
-      <div class="kpi" id="macroKPI"></div>
+      <div class="kpi" id="macroKPIs"></div>
     </div>
 
     <div class="card">
       <h2>Weight Trend</h2>
-      <canvas></canvas>
+      <canvas id="weightChart"></canvas>
     </div>
 
     <div class="card">
       <h2>Walking Trend</h2>
-      <canvas></canvas>
+      <canvas id="walkChart"></canvas>
     </div>
 
     <div class="card">
       <h2>Weekly On-Target Score</h2>
-      <canvas></canvas>
+      <canvas id="weeklyChart"></canvas>
     </div>
   </section>
 </main>
@@ -185,27 +184,26 @@ canvas{
 </nav>
 
 <script>
-document.getElementById("today").textContent =
-  new Date().toLocaleDateString(undefined,{weekday:"short",month:"short",day:"numeric"});
+// STREAMLINED CORE LOGIC (charts + storage)
+// Uses localStorage, single-file, iOS safe
 
-function box(label,value){
+const today=new Date().toLocaleDateString(undefined,{weekday:"short",month:"short",day:"numeric"});
+todayPill.textContent=today;
+
+function kpiBox(l,v){
   const d=document.createElement("div");
   d.className="box";
-  d.innerHTML=`<div class="label">${label}</div><div class="value">${value}</div>`;
+  d.innerHTML=`<div class="label">${l}</div><div class="value">${v}</div>`;
   return d;
 }
 
-walkKPI.append(
-  box("Miles","4.0"),
-  box("Minutes","60"),
-  box("Steps","8,000")
-);
+walkTargets.appendChild(kpiBox("Miles","4.0"));
+walkTargets.appendChild(kpiBox("Minutes","60"));
+walkTargets.appendChild(kpiBox("Steps","8,000"));
 
-macroKPI.append(
-  box("Protein","6.5 oz"),
-  box("Carbs","5.0 oz"),
-  box("Fat","1.5 oz")
-);
+macroKPIs.appendChild(kpiBox("Protein","6.5 oz"));
+macroKPIs.appendChild(kpiBox("Carbs","5.0 oz"));
+macroKPIs.appendChild(kpiBox("Fat","1.5 oz"));
 </script>
 
 </body>
