--- a/index.html
+++ b/index.html
@@ -241,6 +241,30 @@
       font-size: 12px;
       line-height: 1.35;
     }
+
+    /* --- Macro Bar Graphs (Eaten vs Target) --- */
+    .macroBars{display:grid; gap:10px}
+    .macroRow{display:grid; grid-template-columns: 92px 1fr; gap:10px; align-items:center}
+    .macroName{font-size:12px; color:var(--muted); font-weight:850; letter-spacing:.2px}
+    .macroMeta{display:flex; align-items:baseline; justify-content:space-between; gap:10px; margin-top:6px}
+    .macroMeta .mono{font-size:12px}
+    .macroMeta .small{font-size:12px}
+    .macroTrack{
+      height:12px;
+      border-radius:999px;
+      background: rgba(255,255,255,.07);
+      border: 1px solid rgba(255,255,255,.10);
+      overflow:hidden;
+    }
+    .macroFill{
+      height:100%;
+      width:0%;
+      border-radius:999px;
+      transition: width .18s ease;
+    }
+    .macroFill.blue{background: rgba(58,160,255,.92)}
+    .macroFill.green{background: rgba(61,220,151,.92)}
+    .macroFill.red{background: rgba(255,107,107,.92)}
   </style>
 </head>
 
@@ -266,14 +290,14 @@
       <div class="progress" aria-label="walk progress"><div id="walkProgressBar"></div></div>
       <div class="divider"></div>
       <div class="btnbar">
-        <button id="btnQuickLogWalk">Quick log walk</button>
-        <button class="secondary" id="btnGoSetup">Edit plan</button>
+        <button id="btnQuickLogWalk" type="button">Quick log walk</button>
+        <button class="secondary" id="btnGoSetup" type="button">Edit plan</button>
       </div>
     </div>
 
     <div class="card">
-      <h2>Macros Today</h2>
-      <div class="kpi" id="macroKPIs"></div>
+      <h2>Macros Today (Eaten vs Target)</h2>
+      <div class="macroBars" id="macroBarsDash"></div>
       <div class="divider"></div>
       <div class="row">
         <div class="small">Calories</div>
@@ -281,8 +305,8 @@
       </div>
       <div class="divider"></div>
       <div class="btnbar">
-        <button id="btnQuickAddFood">Add food entry</button>
-        <button class="secondary" id="btnGoMacros">View macros</button>
+        <button id="btnQuickAddFood" type="button">Add food entry</button>
+        <button class="secondary" id="btnGoMacros" type="button">View macros</button>
       </div>
     </div>
 
@@ -291,8 +315,8 @@
       <canvas id="weightChart" width="900" height="320"></canvas>
       <div class="divider"></div>
       <div class="btnbar">
-        <button id="btnLogWeight">Log weight</button>
-        <button class="secondary" id="btnGoWeight">View weight</button>
+        <button id="btnLogWeight" type="button">Log weight</button>
+        <button class="secondary" id="btnGoWeight" type="button">View weight</button>
       </div>
     </div>
 
@@ -301,7 +325,7 @@
       <canvas id="walkChart" width="900" height="320"></canvas>
       <div class="divider"></div>
       <div class="btnbar">
-        <button class="secondary" id="btnGoWalkFromDash">View walk</button>
+        <button class="secondary" id="btnGoWalkFromDash" type="button">View walk</button>
       </div>
     </div>
 
@@ -339,8 +363,8 @@
         </div>
       </div>
       <div class="btnbar" style="margin-top:12px">
-        <button id="saveWalk">Save</button>
-        <button class="secondary" id="backFromWalk">Back</button>
+        <button id="saveWalk" type="button">Save</button>
+        <button class="secondary" id="backFromWalk" type="button">Back</button>
       </div>
       <div class="divider"></div>
       <div class="small muted">Tip: If you only know minutes, enter minutes and leave miles blank. Miles will be estimated from your pace.</div>
@@ -355,8 +379,8 @@
   <!-- MACROS -->
   <section id="view-macros" class="grid" style="display:none">
     <div class="card">
-      <h2>Today Macros</h2>
-      <div class="kpi" id="macroKPIs2"></div>
+      <h2>Today Macros (Eaten vs Target)</h2>
+      <div class="macroBars" id="macroBarsMacros"></div>
       <div class="divider"></div>
       <div class="row">
         <div class="small">Calories (target / eaten)</div>
@@ -364,8 +388,8 @@
       </div>
       <div class="divider"></div>
       <div class="btnbar">
-        <button id="btnAddEntry2">Add Entry</button>
-        <button class="secondary" id="btnAddFood2">Add Food</button>
+        <button id="btnAddEntry2" type="button">Add Entry</button>
+        <button class="secondary" id="btnAddFood2" type="button">Add Food</button>
       </div>
     </div>
 
@@ -386,8 +410,8 @@
       <input inputmode="decimal" placeholder="e.g., 6" id="entryOz">
 
       <div class="btnbar" style="margin-top:12px">
-        <button id="saveEntry">Save Entry</button>
-        <button class="secondary" id="clearEntry">Clear</button>
+        <button id="saveEntry" type="button">Save Entry</button>
+        <button class="secondary" id="clearEntry" type="button">Clear</button>
       </div>
       <div class="divider"></div>
       <div class="small muted">Foods store macros per 1 oz of that food (grams of macro). Entries multiply by ounces eaten.</div>
@@ -401,7 +425,7 @@
     <div class="card">
       <h2>Foods (macros per 1 oz food)</h2>
       <div class="btnbar" style="margin-bottom:10px">
-        <button id="btnShowAddFood">Add Food</button>
+        <button id="btnShowAddFood" type="button">Add Food</button>
       </div>
       <div id="foodsList"></div>
     </div>
@@ -421,8 +445,8 @@
       <input inputmode="decimal" placeholder="e.g., 1.0" id="foodF">
 
       <div class="btnbar" style="margin-top:12px">
-        <button id="saveFood">Save Food</button>
-        <button class="secondary" id="hideAddFood">Close</button>
+        <button id="saveFood" type="button">Save Food</button>
+        <button class="secondary" id="hideAddFood" type="button">Close</button>
       </div>
     </div>
   </section>
@@ -436,8 +460,8 @@
       <label>Weight (lb)</label>
       <input inputmode="decimal" placeholder="e.g., 225.0" id="wLb">
       <div class="btnbar" style="margin-top:12px">
-        <button id="saveWeight">Save</button>
-        <button class="secondary" id="backFromWeight">Back</button>
+        <button id="saveWeight" type="button">Save</button>
+        <button class="secondary" id="backFromWeight" type="button">Back</button>
       </div>
     </div>
 
@@ -564,17 +588,17 @@
         </div>
       </div>
       <div class="btnbar" style="margin-top:12px">
-        <button id="btnEnableNotifs">Allow notifications</button>
-        <button class="secondary" id="testNotif">Test reminder</button>
+        <button id="btnEnableNotifs" type="button">Allow notifications</button>
+        <button class="secondary" id="testNotif" type="button">Test reminder</button>
       </div>
     </div>
 
     <div class="card">
       <h2>Save</h2>
       <div class="btnbar">
-        <button id="saveSetup">Save Setup</button>
-        <button class="secondary" id="backFromSetup">Back</button>
-        <button class="danger" id="resetAll">Reset all data</button>
+        <button id="saveSetup" type="button">Save Setup</button>
+        <button class="secondary" id="backFromSetup" type="button">Back</button>
+        <button class="danger" id="resetAll" type="button">Reset all data</button>
       </div>
       <div class="divider"></div>
       <div class="small muted">Reset wipes everything stored on this iPhone for WalkCut.</div>
@@ -596,6 +620,7 @@
    WalkCut — single HTML app (Highlander-themed)
    - Reliable iOS tab switching (button + touchstart)
    - Trends: Weight, Walk (daily miles), Weekly On-Target
+   - Macro Bars: Eaten vs Target (Blue/Green/Red)
    - Data stored in localStorage
 -------------------------------------------------- */
 
@@ -741,6 +766,58 @@ function macroConsumed(dayISO){
     fG += food.f * oz;
   }
   return { pG, cG, fG, kcal: caloriesFromMacros(pG,cG,fG) };
+}
+
+/* ---------- Macro Bars (Eaten vs Target) ---------- */
+const MACRO_TOL = 0.05; // Green when within ±5% of target (change to 0.10 for ±10%)
+
+function macroBarRow(label, eaten, target, unitLabel){
+  const pct = target > 0 ? (eaten / target) : 0;
+  const pctClamped = clamp(pct * 100, 0, 160);
+
+  const under = pct < (1 - MACRO_TOL);
+  const over  = pct > (1 + MACRO_TOL);
+  const within = !under && !over;
+
+  const colorClass = over ? "red" : (within ? "green" : "blue");
+
+  const row = document.createElement("div");
+  row.className = "macroRow";
+  row.innerHTML = `
+    <div class="macroName">${label}</div>
+    <div>
+      <div class="macroTrack">
+        <div class="macroFill ${colorClass}" style="width:${Math.min(100,pctClamped)}%"></div>
+      </div>
+      <div class="macroMeta">
+        <div class="mono">${round(eaten,1)} / ${round(target,1)} ${unitLabel}</div>
+        <div class="small">${Math.round(pct*100)}%</div>
+      </div>
+    </div>
+  `;
+  return row;
+}
+
+function renderMacroBars(containerId){
+  const box = document.getElementById(containerId);
+  if(!box) return;
+
+  const unit = state.nutrition.macroUnit;
+  const mt = macroTargets();
+  const mc = macroConsumed(todayISO());
+
+  const tP = mt.pG / gramsPerUnit(unit);
+  const tC = mt.cG / gramsPerUnit(unit);
+  const tF = mt.fG / gramsPerUnit(unit);
+
+  const eP = mc.pG / gramsPerUnit(unit);
+  const eC = mc.cG / gramsPerUnit(unit);
+  const eF = mc.fG / gramsPerUnit(unit);
+
+  box.innerHTML = "";
+  box.appendChild(macroBarRow("Protein", eP, tP, fmtUnit(unit)));
+  box.appendChild(macroBarRow("Carbs",   eC, tC, fmtUnit(unit)));
+  box.appendChild(macroBarRow("Fat",     eF, tF, fmtUnit(unit)));
 }
 
 /* ---------- Macro “On-Target” ---------- */
@@ -979,39 +1056,14 @@ function renderWalkTargets(){
 }
 
 function renderMacrosCards(){
-  const unit = state.nutrition.macroUnit;
   const mt = macroTargets();
   const mc = macroConsumed(todayISO());
 
-  const targetsDisp = {
-    p: mt.pG / gramsPerUnit(unit),
-    c: mt.cG / gramsPerUnit(unit),
-    f: mt.fG / gramsPerUnit(unit)
-  };
-  const consumedDisp = {
-    p: mc.pG / gramsPerUnit(unit),
-    c: mc.cG / gramsPerUnit(unit),
-    f: mc.fG / gramsPerUnit(unit)
-  };
-  const remainingDisp = {
-    p: Math.max(0, targetsDisp.p - consumedDisp.p),
-    c: Math.max(0, targetsDisp.c - consumedDisp.c),
-    f: Math.max(0, targetsDisp.f - consumedDisp.f)
-  };
+  // Macro bars (eaten vs target)
+  renderMacroBars("macroBarsDash");
+  renderMacroBars("macroBarsMacros");
 
-  const kpi1 = document.getElementById("macroKPIs");
-  const kpi2 = document.getElementById("macroKPIs2");
-  kpi1.innerHTML = ""; kpi2.innerHTML = "";
-
-  kpi1.appendChild(kpiBox(`P (${fmtUnit(unit)})`, round(remainingDisp.p,1)));
-  kpi1.appendChild(kpiBox(`C (${fmtUnit(unit)})`, round(remainingDisp.c,1)));
-  kpi1.appendChild(kpiBox(`F (${fmtUnit(unit)})`, round(remainingDisp.f,1)));
-
-  // macros view: target/eaten/remain protein
-  kpi2.appendChild(kpiBox(`Target P (${fmtUnit(unit)})`, round(targetsDisp.p,1)));
-  kpi2.appendChild(kpiBox(`Eaten P (${fmtUnit(unit)})`, round(consumedDisp.p,1)));
-  kpi2.appendChild(kpiBox(`Remain P (${fmtUnit(unit)})`, round(remainingDisp.p,1)));
-
+  // Calories lines
   document.getElementById("calorieLine").textContent =
     `${Math.round(mt.kcal)} target • ${Math.round(mc.kcal)} eaten`;
   document.getElementById("calorieLine2").textContent =
@@ -1049,13 +1101,12 @@ function renderFoodsList(){
             <div style="font-weight:850">${escapeHtml(f.name)}</div>
             <div class="small muted">per 1 oz food → P ${round(p,2)} ${fmtUnit(unit)} • C ${round(c,2)} ${fmtUnit(unit)} • F ${round(fat,2)} ${fmtUnit(unit)} • ${Math.round(kcal)} kcal</div>
           </div>
-          <button class="danger" data-del-food="${f.id}">Delete</button>
+          <button class="danger" data-del-food="${f.id}" type="button">Delete</button>
         </div>
       </div>
     `;
   }).join("");
 
-  // bind delete buttons
   out.querySelectorAll("[data-del-food]").forEach(btn=>{
     btn.onclick = () => deleteFood(btn.getAttribute("data-del-food"));
   });
@@ -1080,7 +1131,7 @@ function renderTodayFoodLog(){
         </div>
         <div class="row" style="gap:8px">
           <span class="badge mono">${round(e.oz,1)} oz</span>
-          <button class="danger" data-del-entry="${e.id}">Delete</button>
+          <button class="danger" data-del-entry="${e.id}" type="button">Delete</button>
         </div>
       </div>
     `;
@@ -1107,7 +1158,7 @@ function renderWalkHistory(){
             <td>${w.day}</td>
             <td class="right mono">${round(w.miles,1)}</td>
             <td class="right mono">${Math.round(w.minutes)}</td>
-            <td class="right"><button class="danger" data-del-walk="${w.day}">Delete</button></td>
+            <td class="right"><button class="danger" data-del-walk="${w.day}" type="button">Delete</button></td>
           </tr>
         `).join("")}
       </tbody>
@@ -1133,7 +1184,7 @@ function renderWeightList(){
           <tr>
             <td>${w.day}</td>
             <td class="right mono">${round(w.lb,1)}</td>
-            <td class="right"><button class="danger" data-del-weight="${w.day}">Delete</button></td>
+            <td class="right"><button class="danger" data-del-weight="${w.day}" type="button">Delete</button></td>
           </tr>
         `).join("")}
       </tbody>
@@ -1330,7 +1381,7 @@ function wireButtons(){
   // macros view
   document.getElementById("btnShowAddFood").onclick = ()=> { document.getElementById("addFoodCard").style.display = ""; };
   document.getElementById("hideAddFood").onclick = ()=> { document.getElementById("addFoodCard").style.display = "none"; };
-  document.getElementById("btnAddFood2").onclick = ()=> {
+  document.getElementById("btnAddFood2").onclick = ()=>{
     document.getElementById("addFoodCard").style.display = "";
     window.scrollTo({top: document.body.scrollHeight, behavior:"smooth"});
   };
@@ -1383,11 +1434,14 @@ function wireButtons(){
   };
 
   // setup dynamic controls
-  document.getElementById("walkShare").oninput = ()=> {
+  document.getElementById("walkShare").oninput = ()=>{
     document.getElementById("walkShareLabel").textContent = `${document.getElementById("walkShare").value}%`;
   };
   document.getElementById("autoTargets").onchange = ()=> toggleAutoTargetsUI();
-  document.getElementById("macroUnit").onchange = ()=> { state.nutrition.macroUnit = document.getElementById("macroUnit").value; saveState(); };
+  document.getElementById("macroUnit").onchange = ()=>{
+    state.nutrition.macroUnit = document.getElementById("macroUnit").value;
+    saveState();
+  };
   document.getElementById("protPerLb").oninput = document.getElementById("fatPerLb").oninput = ()=> renderMacroPreview();
   document.getElementById("custP").oninput = document.getElementById("custC").oninput = document.getElementById("custF").oninput = ()=> renderMacroPreview();
 
